Update skincare routine's update service